Fix clear completed button bug - ul.filter positioned absolute covers it

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -189,10 +189,16 @@ input::placeholder {
 }
 
 .clear-completed {
+  position: relative;
   float: right;
   border: none;
   color: #777;
   background-color: #FFF;
+}
+
+.clear-completed:hover {
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 footer {
